src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If field is checked, contact record should not be visible to any user except system administrators or integration users.</description>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <description>Role type of the related contact</description>
        <inlineHelpText>Initial role definition for the contact for the parent account.</inlineHelpText>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Artist Agent</fullName>
                </value>
                <value>
                    <fullName>Artist Contact</fullName>
                </value>
                <value>
                    <fullName>Artist Manager</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Business Contact</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>On-Air Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Press Representative</fullName>
                </value>
                <value>
                    <fullName>Primary Artist Contact</fullName>
                </value>
                <value>
                    <fullName>Programming</fullName>
                </value>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Promotion Manager</fullName>
                </value>
                <value>
                    <fullName>Promotions/Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Tech Contact</fullName>
                </value>
                <value>
                    <fullName>Traffic Coordinator</fullName>
                </value>
                <value>
                    <fullName>Venue Box Office</fullName>
                </value>
                <value>
                    <fullName>Venue GM</fullName>
                </value>
                <value>
                    <fullName>Venue Operations</fullName>
                </value>
                <value>
                    <fullName>Venue Production</fullName>
                </value>
                <value>
                    <fullName>Venue Special Events Coordinator</fullName>
                </value>
                <value>
                    <fullName>Venue Talent Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id of the source system (used in migration - i.e. ROME)</description>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LNE_RoleRequired</fullName>
        <active>true</active>
        <description>Require role for Vendor and Venue related Contacts</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
(Account.RecordType.DeveloperName = &quot;Vendor&quot; ||
Account.RecordType.DeveloperName = &quot;Venue&quot;) &amp;&amp;
ISBLANK(Roles__c)</errorConditionFormula>
        <errorDisplayField>Roles__c</errorDisplayField>
        <errorMessage>You must select at least one role for a contact at a vendor or venue.</errorMessage>
    </validationRules>
</CustomObject>